Fix content margins in the full-bleed container
Addresses an existing bug for content within full-bleed-section.content-constrain that caused margins to misalign with surrounding content

--- a/css/newsroom.css
+++ b/css/newsroom.css
@@ -1752,10 +1752,9 @@ a.content-button.secondary:hover {
 }
 
 .full-bleed-section > .content-constrain {  /* Allows margin-contrained content in the full-bleed region. This allows a margin-constrained sub-container within full bleed. The primary use case is to set off margin-constrained content in a full-bleed color block. */
-    width: calc(100% - 20px);               /* Also, margins are still a bit buggy on screen resize */
+    width: calc(100% - 60px);
     margin: 0 auto;
-    max-width: 720px;
-    padding: 0 10px;
+    max-width: 700px;
 }
 
 .body-container p.caption, .body-container figcaption.caption {
